# study-facsimile-backend

./: .gitignore  CMakeLists.txt  README.md  README.zh-CN.md  main.cc  vcpkg.json
controllers/: HelloWorld.cpp  HelloWorld.hpp  api_account.cc  api_account.hpp
models/: account.cpp  account.hpp  base_mongo_object.hpp
services/: account_service.cpp  account_service.hpp  database.cpp  database.hpp  setting_service.cpp  setting_service.hpp
test/: CMakeLists.txt
